--- a/src/main/java/com/virusoft/lemonhrm/views/dashboard-content-view.fxml
+++ b/src/main/java/com/virusoft/lemonhrm/views/dashboard-content-view.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="720.0" prefHeight="1025.0" prefWidth="1064.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.virusoft.lemonhrm.controllers.DashboardContentController">
+<AnchorPane minHeight="720.0" prefHeight="1025.0" prefWidth="1015.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.virusoft.lemonhrm.views.DashboardContentController">
    <children>
       <VBox layoutX="100.0" layoutY="77.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="90.0" AnchorPane.topAnchor="77.0">
          <children>
@@ -49,12 +49,12 @@
                                     </Label>
                                     <ImageView fitHeight="24.0" fitWidth="20.0" layoutX="15.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/icon-myaction.png" />
+                                          <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-myaction.png" />
                                        </image>
                                     </ImageView>
                                     <ImageView fitHeight="255.0" fitWidth="211.0" layoutX="30.0" layoutY="91.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/icon-empty-dashboard.png" />
+                                          <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-empty-dashboard.png" />
                                        </image>
                                     </ImageView>
                                     <Label layoutX="57.0" layoutY="309.0" prefHeight="24.0" prefWidth="157.0" text="No Pending Actions to Perform" textFill="#535c90">
@@ -80,22 +80,22 @@
                                     </Label>
                                     <ImageView fitHeight="24.0" fitWidth="20.0" layoutX="11.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/icon-myaction.png" />
+                                          <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-myaction.png" />
                                        </image>
                                     </ImageView>
                                     <ImageView fitHeight="43.0" fitWidth="41.0" layoutX="47.0" layoutY="63.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/icon-apply-leave.png" />
+                                          <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-apply-leave.png" />
                                        </image>
                                     </ImageView>
                                     <ImageView fitHeight="43.0" fitWidth="41.0" layoutX="118.0" layoutY="63.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/icon-my-leave.png" />
+                                          <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-my-leave.png" />
                                        </image>
                                     </ImageView>
                                     <ImageView fitHeight="43.0" fitWidth="41.0" layoutX="189.0" layoutY="63.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/icon-my-timesheet.png" />
+                                          <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-my-timesheet.png" />
                                        </image>
                                     </ImageView>
                                     <Label alignment="CENTER" layoutX="32.0" layoutY="103.0" prefHeight="24.0" prefWidth="70.0" text="Apply Leave" textFill="#535c90">
@@ -125,12 +125,12 @@
                                     </Label>
                                     <ImageView fitHeight="24.0" fitWidth="20.0" layoutX="12.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/icon-clock-black.png" />
+                                          <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-clock-black.png" />
                                        </image>
                                     </ImageView>
                                     <ImageView fitHeight="43.0" fitWidth="41.0" layoutX="15.0" layoutY="51.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/icon-user-small.png" />
+                                          <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-user-small.png" />
                                        </image>
                                     </ImageView>
                                     <Label layoutX="65.0" layoutY="61.0" prefHeight="24.0" prefWidth="98.0" text="Not Punched In" textFill="#535c90">
@@ -141,7 +141,7 @@
                                     <ProgressBar layoutX="16.0" layoutY="106.0" prefHeight="24.0" prefWidth="200.0" progress="0.3" />
                                     <ImageView fitHeight="43.0" fitWidth="41.0" layoutX="218.0" layoutY="96.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/icon-clock-orange.png" />
+                                          <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-clock-orange.png" />
                                        </image>
                                     </ImageView>
                                     <Separator layoutX="13.0" layoutY="144.0" prefHeight="3.0" prefWidth="244.0" style="-fx-background-color: #535c90;" />
@@ -205,7 +205,7 @@
                                     </Label>
                                     <ImageView fitHeight="24.0" fitWidth="20.0" layoutX="203.0" layoutY="169.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/icon-clock-black.png" />
+                                          <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-clock-black.png" />
                                        </image>
                                     </ImageView>
                                  </children>
@@ -253,12 +253,12 @@
                                     </Label>
                                     <ImageView fitHeight="24.0" fitWidth="20.0" layoutX="15.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/icon-myaction.png" />
+                                          <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-myaction.png" />
                                        </image>
                                     </ImageView>
                                     <ImageView fitHeight="255.0" fitWidth="211.0" layoutX="30.0" layoutY="91.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/icon-empty-dashboard.png" />
+                                          <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-empty-dashboard.png" />
                                        </image>
                                     </ImageView>
                                     <Label layoutX="57.0" layoutY="309.0" prefHeight="24.0" prefWidth="157.0" text="No Pending Actions to Perform" textFill="#535c90">
@@ -284,12 +284,12 @@
                                     </Label>
                                     <ImageView fitHeight="24.0" fitWidth="20.0" layoutX="11.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/icon-myaction.png" />
+                                          <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-myaction.png" />
                                        </image>
                                     </ImageView>
                                     <ImageView fitHeight="255.0" fitWidth="211.0" layoutX="29.0" layoutY="91.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/icon-empty-dashboard.png" />
+                                          <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-empty-dashboard.png" />
                                        </image>
                                     </ImageView>
                                     <Label layoutX="56.0" layoutY="309.0" prefHeight="24.0" prefWidth="157.0" text="No Pending Actions to Perform" textFill="#535c90">
@@ -312,12 +312,12 @@
                                     </Label>
                                     <ImageView fitHeight="24.0" fitWidth="20.0" layoutX="12.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/icon-qm.png" />
+                                          <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-qm.png" />
                                        </image>
                                     </ImageView>
                                     <ImageView fitHeight="43.0" fitWidth="41.0" layoutX="15.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/icon-user-small.png" />
+                                          <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-user-small.png" />
                                        </image>
                                     </ImageView>
                                     <Label layoutX="65.0" layoutY="62.0" prefHeight="24.0" prefWidth="98.0" text="Supervisor" textFill="#535c90">
