--- a/src/main/java/com/virusoft/lemonhrm/views/dashboard-view.fxml
+++ b/src/main/java/com/virusoft/lemonhrm/views/dashboard-view.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="dashboardBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.virusoft.lemonhrm.controllers.DashboardController">
+<BorderPane fx:id="dashboardBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.virusoft.lemonhrm.views.DashboardController">
     <top>
         <AnchorPane prefHeight="67.0" prefWidth="1280.0" style="-fx-background-color: ff7b1d;" BorderPane.alignment="CENTER">
             <children>
@@ -23,23 +23,23 @@
                         <Font size="23.0" />
                     </font>
                 </Label>
-                <Pane layoutY="-1.0" prefHeight="75.0" prefWidth="204.0" style="-fx-background-color: white;">
+                <Pane layoutY="-1.0" prefHeight="75.0" prefWidth="249.0" style="-fx-background-color: white;">
                     <children>
-                        <ImageView fitHeight="55.0" fitWidth="195.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="55.0" fitWidth="230.0" layoutX="39.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../images/icon-banner.png" />
+                                <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-banner.png" />
                             </image>
                         </ImageView>
                     </children>
                 </Pane>
-                <Label fx:id="clickableLabel1" layoutX="253.0" layoutY="24.0" prefHeight="29.0" prefWidth="177.0" text="Dashboard" textFill="WHITE">
+                <Label fx:id="clickableLabel1" layoutX="302.0" layoutY="23.0" prefHeight="29.0" prefWidth="177.0" text="Dashboard" textFill="WHITE">
                     <font>
                         <Font size="23.0" />
                     </font>
                 </Label>
                 <ImageView fx:id="userImageView" fitHeight="29.0" fitWidth="29.0" layoutX="1074.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="177.0">
                     <image>
-                        <Image url="@../images/icon-user.png" />
+                        <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-user.png" />
                     </image>
                 </ImageView>
                 <MenuButton fx:id="usernameMenuButton" contentDisplay="RIGHT" layoutX="1105.0" layoutY="25.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="139.0" text="Wilson A. Limbago Jr." textFill="WHITE" underline="true" AnchorPane.rightAnchor="36.0">
@@ -51,7 +51,7 @@
         </AnchorPane>
     </top>
     <left>
-        <AnchorPane fx:id="navbarAnchorPane" prefHeight="643.0" prefWidth="204.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+        <AnchorPane fx:id="navbarAnchorPane" prefHeight="643.0" prefWidth="250.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
             <children>
                 <fx:include fx:id="adminUserNavbar" source="admin-user-navbar-view.fxml" AnchorPane.bottomAnchor="58.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             </children>
@@ -71,9 +71,9 @@
     <bottom>
         <AnchorPane prefHeight="24.0" prefWidth="1280.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
             <children>
-                <ImageView fitHeight="37.0" fitWidth="146.0" layoutX="44.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="1.0">
+                <ImageView fitHeight="37.0" fitWidth="146.0" layoutX="60.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="1.0">
                     <image>
-                        <Image url="@../images/icon-banner.png" />
+                        <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-banner.png" />
                     </image>
                 </ImageView>
             </children>
@@ -82,14 +82,14 @@
     <center>
         <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
             <children>
-                <HBox prefHeight="50.0" prefWidth="1061.0">
+                <HBox minWidth="1015.0" prefHeight="50.0" prefWidth="1015.0">
                     <children>
-                        <AnchorPane fx:id="menuAnchorPane" prefHeight="50.0" prefWidth="1061.0" HBox.hgrow="ALWAYS" />
+                        <AnchorPane fx:id="menuAnchorPane" prefHeight="50.0" prefWidth="1061.0" style="-fx-background-color: white;" HBox.hgrow="ALWAYS" />
                     </children>
                 </HBox>
-                <AnchorPane fx:id="contentAnchorPane" prefHeight="496.0" prefWidth="1061.0" VBox.vgrow="ALWAYS">
+                <AnchorPane fx:id="contentAnchorPane" minWidth="1015.0" prefHeight="496.0" prefWidth="1015.0" VBox.vgrow="ALWAYS">
                     <children>
-                        <ScrollPane fx:id="contentScrollPane" hbarPolicy="NEVER" prefHeight="495.0" prefWidth="1061.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <ScrollPane fx:id="contentScrollPane" hbarPolicy="NEVER" prefHeight="495.0" prefWidth="1015.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                     </children>
                 </AnchorPane>
             </children>
