--- a/src/main/java/com/virusoft/lemonhrm/views/login-view.fxml
+++ b/src/main/java/com/virusoft/lemonhrm/views/login-view.fxml
@@ -15,10 +15,10 @@
             prefHeight="500.0" prefWidth="626.0" style="-fx-background-color: white;"
             xmlns="http://javafx.com/javafx/20.0.1"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.virusoft.lemonhrm.controllers.LoginController">
+            fx:controller="com.virusoft.lemonhrm.views.LoginController">
     <ImageView fitHeight="486.0" fitWidth="351.0" layoutX="274.0" layoutY="7.0" pickOnBounds="true"
                preserveRatio="true">
-        <Image url="@../images/icon-side-banner.png"/>
+        <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-side-banner.png"/>
     </ImageView>
     <Label layoutX="108.0" layoutY="186.0" text="Username" textFill="#a8a8a8">
         <font>
@@ -38,13 +38,13 @@
                 </color>
             </DropShadow>
         </effect>
-        <Image url="@../images/icon-banner.png"/>
+        <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-banner.png"/>
     </ImageView>
     <ImageView fitHeight="16.0" fitWidth="18.0" layoutX="91.0" layoutY="185.0" pickOnBounds="true" preserveRatio="true">
-        <Image url="@../images/icon-person.png"/>
+        <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-person.png"/>
     </ImageView>
     <ImageView fitHeight="15.0" fitWidth="16.0" layoutX="92.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true">
-        <Image url="@../images/icon-password.png"/>
+        <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-password.png"/>
     </ImageView>
     <Label layoutX="149.0" layoutY="452.0" text="OrangeHRM OS 5.5" textFill="#a8a8a8">
         <font>
