--- a/src/main/java/com/virusoft/lemonhrm/views/pim-menu-view.fxml
+++ b/src/main/java/com/virusoft/lemonhrm/views/pim-menu-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.*?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0"
             prefWidth="1061.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.virusoft.lemonhrm.controllers.PimMenuController">
+            fx:controller="com.virusoft.lemonhrm.views.PimMenuController">
     <children>
         <Label fx:id="menu1RoundedLabel" layoutX="51.0" layoutY="8.0" opacity="0.4" prefHeight="20.0" prefWidth="125.0"
                style="-fx-background-color: ff7b1d;" textFill="WHITE" AnchorPane.bottomAnchor="7.0"
@@ -92,7 +92,7 @@
         <ImageView fx:id="userImageView1" fitHeight="16.0" fitWidth="51.0" layoutX="1036.0" layoutY="18.0"
                    pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="7.956521987915039">
             <image>
-                <Image url="@../images/icon-qm.png"/>
+                <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-qm.png"/>
             </image>
         </ImageView>
     </children>
