--- a/src/main/java/com/virusoft/lemonhrm/views/pim-user-navbar-view.fxml
+++ b/src/main/java/com/virusoft/lemonhrm/views/pim-user-navbar-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="adminUserNavbar" prefHeight="443.0" prefWidth="204.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.virusoft.lemonhrm.controllers.AdminUserNavbarController">
+<Pane fx:id="adminUserNavbar" prefHeight="443.0" prefWidth="204.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.virusoft.lemonhrm.views.AdminUserNavbarController">
     <children>
         <TextField fx:id="searchTextField" layoutX="48.0" layoutY="13.0" prefHeight="24.0" prefWidth="142.0" promptText="Search..." />
         <Button fx:id="dashboardButton" contentDisplay="TEXT_ONLY" layoutX="-1.0" layoutY="47.0" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0" prefWidth="205.0" text="Dashboard  " textFill="#433d61f2">
@@ -42,47 +42,47 @@
         <Label fx:id="clickableLabel" alignment="CENTER" layoutX="1.0" layoutY="305.0" prefHeight="26.0" prefWidth="202.0" text="Clickable Label" />
         <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="24.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../images/icon-dashboard.png" />
+                <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-dashboard.png" />
             </image>
         </ImageView>
         <ImageView fx:id="sampleImageView" fitHeight="30.0" fitWidth="30.0" layoutX="21.0" layoutY="305.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../images/icon-buzz.png" />
+                <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-buzz.png" />
             </image>
         </ImageView>
         <ImageView fitHeight="29.0" fitWidth="31.0" layoutX="17.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../images/icon-search.png" />
+                <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-search.png" />
             </image>
         </ImageView>
         <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="23.0" layoutY="165.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../images/icon-leave.png" />
+                <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-leave.png" />
             </image>
         </ImageView>
         <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="24.0" layoutY="199.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../images/icon-time.png" />
+                <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-time.png" />
             </image>
         </ImageView>
         <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="24.0" layoutY="93.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../images/icon-myinfo.png" />
+                <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-myinfo.png" />
             </image>
         </ImageView>
         <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="24.0" layoutY="128.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../images/icon-performance.png" />
+                <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-performance.png" />
             </image>
         </ImageView>
         <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="23.0" layoutY="235.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../images/icon-directory.png" />
+                <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-directory.png" />
             </image>
         </ImageView>
         <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="22.0" layoutY="271.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../images/icon-buzz.png" />
+                <Image url="@../../../../../resources/com/virusoft/lemonhrm/images/icon-buzz.png" />
             </image>
         </ImageView>
 
